--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.6
+  get_storage: ^2.1.1
+  curved_navigation_bar: ^1.0.3
   simple_circular_progress_bar: ^1.0.2
 
 dev_dependencies:
